# loadr

./: .gitignore  .gitleaks.toml  Cargo.toml  LICENSE  README.md  action.yml  deny.toml
.cargo/: audit.toml
.github/actions/: README.md
.github/workflows/: acceptance.yml  action-selftest.yml  benchmark.yml  ci.yml  desktop-release.yml  desktop.yml  docs.yml  major-tag.yml  publish-crates.yml  publish-packages.yml  publish-plugins.yml  release.yml
Formula/: loadr.rb
benchmarks/: .gitignore  CONFIGURATION.md  README.md  TUNING.md  docker-compose.yml  run.sh
benchmarks/lib/: report.py
bucket/: loadr.json
crates/loadr-agent/: Cargo.toml  build.rs
crates/loadr-agent/proto/loadr/coordination/v1/: coordination.proto
crates/loadr-agent/src/: agent.rs  controller.rs  error.rs  lib.rs
crates/loadr-agent/tests/: distributed.rs
crates/loadr-browser/: Cargo.toml
crates/loadr-cli/: Cargo.toml
crates/loadr-cli/src/: main.rs  progress.rs  report_html.rs
crates/loadr-cli/src/commands/: convert.rs  download.rs  mod.rs  plugin.rs  report.rs  run.rs  validate.rs
crates/loadr-cli/tests/: e2e.rs
crates/loadr-config/: Cargo.toml
crates/loadr-config/src/: plan.rs  validate.rs
crates/loadr-config/tests/: examples.rs
crates/loadr-convert/: Cargo.toml
crates/loadr-convert/src/: har.rs  jmx.rs  k6.rs  lib.rs
crates/loadr-convert/tests/: jmx_tests.rs  k6_tests.rs
crates/loadr-convert/tests/data/: complex.jmx  full_k6.js  scenarios_k6.js  simple.jmx  simple_k6.js
crates/loadr-core/: Cargo.toml
crates/loadr-core/src/: aggregate.rs  conditions.rs  cookies.rs  data.rs  engine.rs  error.rs  executor.rs  extract.rs  flow.rs  lib.rs  metrics.rs  output.rs  pacing.rs  protocol.rs  script.rs  summary.rs  thresholds.rs  vu.rs
crates/loadr-core/tests/: flow_control.rs
crates/loadr-js/: Cargo.toml
crates/loadr-js/src/: convert.rs  globals.rs  host_bridge.rs  lib.rs  modules.rs  prelude.js
crates/loadr-js/tests/: integration.rs
crates/loadr-outputs/: Cargo.toml
crates/loadr-outputs/src/: http_client.rs  lib.rs  observe.rs  test_support.rs
crates/loadr-plugin-api/: Cargo.toml
crates/loadr-plugin-api/src/: abi.rs  cabi.rs  error.rs  install.rs  lib.rs  manifest.rs  native.rs  registry.rs  traits.rs  wasm.rs
crates/loadr-plugin-api/tests/: c_abi_plugins.rs  native_plugins.rs  registry.rs  wasm_plugins.rs
crates/loadr-plugin-api/tests/common/: mod.rs
crates/loadr-plugin-api/wit/: loadr.wit
crates/loadr-protocols/: Cargo.toml
crates/loadr-protocols/src/: lib.rs  sql.rs
crates/loadr-protocols/tests/: sql.rs  sse.rs
deploy/: Dockerfile  docker-compose.yml  prometheus.yml
deploy/k8s/: agents.yaml  controller.yaml  namespace.yaml
desktop/: .gitignore  .releaserc.json  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
desktop/e2e/: app.ts  compose.spec.ts  run-shots.mjs  run.spec.ts  screenshots.mjs  smoke.spec.ts
desktop/scripts/: before-pack.cjs  stage-loadr.mjs
docs/: book.toml
docs/design/: concurrency-consistency-testing.md  desktop-live-cockpit.md  observe-metric-sources.md
docs/src/: webui.md  (+3 more)
examples/: 01-quickstart.yaml  02-ramping-load.yaml  03-arrival-rate.yaml  04-spike-test.yaml  05-data-driven.yaml  06-correlation.yaml  07-scenarios-and-groups.yaml  08-javascript.yaml  09-websocket.yaml  10-grpc.yaml  11-graphql.yaml  12-tcp-udp.yaml  13-environments.yaml  14-outputs-and-soak.yaml  15-distributed.yaml  24-timeseries-report.yaml  26-failure-breakdown.yaml  27-postgres.yaml  27-sql.yaml  28-mongo.yaml  29-mysql.yaml  30-redis.yaml  31-kafka.yaml  32-rabbitmq.yaml  33-elasticsearch.yaml  34-c-echo.yaml  35-go-echo.yaml
goals/: README.md
packaging/: render-packages.sh
plugins/: index.json
plugins/loadr-plugin-aws-sigv4/: Cargo.toml  plugin.toml
plugins/loadr-plugin-aws-sigv4/src/: lib.rs
plugins/loadr-plugin-cassandra/: Cargo.toml  plugin.toml
plugins/loadr-plugin-cassandra/src/: lib.rs
plugins/loadr-plugin-cloudwatch/: Cargo.toml  plugin.toml
plugins/loadr-plugin-cloudwatch/src/: lib.rs
plugins/loadr-plugin-data-cleanup/: Cargo.toml  plugin.toml
plugins/loadr-plugin-data-cleanup/src/: lib.rs
plugins/loadr-plugin-datadog/: Cargo.toml  plugin.toml
plugins/loadr-plugin-datadog/src/: lib.rs
plugins/loadr-plugin-db-seeder/: Cargo.toml  plugin.toml
plugins/loadr-plugin-db-seeder/src/: lib.rs
plugins/loadr-plugin-elasticsearch/: Cargo.toml  plugin.toml
plugins/loadr-plugin-elasticsearch/src/: lib.rs
plugins/loadr-plugin-faker-gen/: Cargo.toml  plugin.toml
plugins/loadr-plugin-faker-gen/src/: lib.rs
plugins/loadr-plugin-hmac-signer/: Cargo.toml  plugin.toml
plugins/loadr-plugin-hmac-signer/src/: lib.rs
plugins/loadr-plugin-junit-report/: Cargo.toml  plugin.toml
plugins/loadr-plugin-junit-report/src/: lib.rs
plugins/loadr-plugin-k8s-metrics/: Cargo.toml  plugin.toml
plugins/loadr-plugin-k8s-metrics/src/: lib.rs
plugins/loadr-plugin-kafka/: Cargo.toml  plugin.toml
plugins/loadr-plugin-kafka/src/: lib.rs
plugins/loadr-plugin-mongo/: Cargo.toml  plugin.toml
plugins/loadr-plugin-mongo/src/: lib.rs
plugins/loadr-plugin-mqtt/: Cargo.toml  plugin.toml
plugins/loadr-plugin-mqtt/src/: lib.rs
plugins/loadr-plugin-mysql/: Cargo.toml  plugin.toml
plugins/loadr-plugin-mysql/src/: lib.rs
plugins/loadr-plugin-nats/: Cargo.toml  plugin.toml
plugins/loadr-plugin-nats/src/: lib.rs
plugins/loadr-plugin-oauth2-minter/: Cargo.toml  plugin.toml
plugins/loadr-plugin-oauth2-minter/src/: lib.rs
plugins/loadr-plugin-otlp-metrics/: Cargo.toml  plugin.toml
plugins/loadr-plugin-otlp-metrics/src/: lib.rs
plugins/loadr-plugin-postgres/: Cargo.toml  plugin.toml
plugins/loadr-plugin-postgres/src/: lib.rs
scripts/: build-plugin.sh  gen-plugin-index.sh  run-examples.sh
site/: 404.html  build-demos.py  build-examples-index.py  build-nav.py  build-plugins.py  cookies.html  demos.html  deploy.sh  downloads.html  index.html  package-lock.json  package.json  plugins.html  privacy.html
(+393 files in other folders)
