[workspace]
resolver = "2"
members = [
    "crates/loadr-core",
    "crates/loadr-config",
    "crates/loadr-js",
    "crates/loadr-protocols",
    "crates/loadr-outputs",
    "crates/loadr-plugin-api",
    "crates/loadr-agent",
    "crates/loadr-convert",
    "crates/loadr-browser",
    "crates/loadr-cli",
    "plugins/loadr-plugin-webui",
    "plugins/loadr-plugin-mongo",
    "plugins/loadr-plugin-postgres",
    "plugins/loadr-plugin-mysql",
    "plugins/loadr-plugin-redis",
    "plugins/loadr-plugin-kafka",
    "plugins/loadr-plugin-elasticsearch",
    "plugins/loadr-plugin-rabbitmq",
    "plugins/loadr-plugin-redis-loader",
    "plugins/loadr-plugin-datadog",
    "plugins/loadr-plugin-faker-gen",
    "plugins/loadr-plugin-s3-dataset",
    "plugins/loadr-plugin-sql-feeder",
    "plugins/loadr-plugin-nats",
    "plugins/loadr-plugin-slack-notifier",
    "plugins/loadr-plugin-webhook",
    "plugins/loadr-plugin-s3-archive",
    "plugins/loadr-plugin-junit-report",
    "plugins/loadr-plugin-cloudwatch",
    "plugins/loadr-plugin-otlp-metrics",
    "plugins/loadr-plugin-aws-sigv4",
    "plugins/loadr-plugin-k8s-metrics",
    "plugins/loadr-plugin-oauth2-minter",
    "plugins/loadr-plugin-hmac-signer",
    "plugins/loadr-plugin-vault-fetch",
    "plugins/loadr-plugin-db-seeder",
    "plugins/loadr-plugin-data-cleanup",
    "plugins/loadr-plugin-mqtt",
    "plugins/loadr-plugin-cassandra",
    "plugins/loadr-plugin-testcontainers",
    "plugins/examples/native-output",
    "plugins/examples/native-protocol",
    "testsupport/loadr-testserver",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://loadr.io"
homepage = "https://loadr.io"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates carry an explicit version so they can be published to
# crates.io (path-only deps are rejected by the registry). loadr-testserver
# stays path-only — it is publish=false and used only as a dev-dependency.
loadr-core = { path = "crates/loadr-core", version = "1.0.0" }
loadr-config = { path = "crates/loadr-config", version = "1.0.0" }
loadr-js = { path = "crates/loadr-js", version = "1.0.0" }
loadr-protocols = { path = "crates/loadr-protocols", version = "1.0.0" }
loadr-outputs = { path = "crates/loadr-outputs", version = "1.0.0" }
loadr-plugin-api = { path = "crates/loadr-plugin-api", version = "1.0.0" }
loadr-agent = { path = "crates/loadr-agent", version = "1.0.0" }
loadr-convert = { path = "crates/loadr-convert", version = "1.0.0" }
loadr-browser = { path = "crates/loadr-browser", version = "1.0.0" }
loadr-plugin-webui = { path = "plugins/loadr-plugin-webui", version = "1.0.0" }
loadr-testserver = { path = "testsupport/loadr-testserver" }

tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1", features = ["indexmap2"] }
serde_json_path = "0.7"
jmespath = { version = "0.5", features = ["sync"] }

thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "webpki-roots", "http1", "tls12"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
rcgen = "0.14"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
protox = "0.9"

rquickjs = { version = "0.12", features = ["loader", "array-buffer", "futures", "macro"] }

wasmtime = { version = "45", default-features = false, features = ["runtime", "component-model", "cranelift", "parallel-compilation"] }
wasmtime-wasi = "45"
abi_stable = "0.11"
libloading = "0.9"

axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip"] }
rust-embed = "8"

clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
owo-colors = { version = "4", features = ["supports-colors"] }
indicatif = "0.18"

hdrhistogram = { version = "7", features = ["serialization"] }
csv = "1"
regex = "1"
url = "2"
cookie = "0.18"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.10"
rand_distr = "0.6"
base64 = "0.22"
sha2 = "0.11"
sha1 = "0.11"
md-5 = "0.11"
hmac = "0.13"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
brotli = "8"
quick-xml = { version = "0.40", features = ["serialize"] }
sxd-document = "0.3"
sxd-xpath = "0.4"
scraper = "0.27"
humantime = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
toml = "0.8"
tempfile = "3"
once_cell = "1"
dashmap = "6"
percent-encoding = "2"
mime = "0.3"
httparse = "1"
pin-project-lite = "0.2"
ipnet = "2"
crossbeam-channel = "0.5"
serde_path_to_error = "0.1"
strsim = "0.11"
indexmap = { version = "2", features = ["serde"] }
glob = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1
