[package]
name = "loadr-agent"
description = "Distributed execution for loadr: coordination controller and load agents"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
loadr-core = { workspace = true }
loadr-config = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
protox = { workspace = true }
tonic-prost-build = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
