[package]
name = "loadr-browser"
description = "Headless-Chrome browser protocol for loadr (navigation timing + Web Vitals)"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
loadr-core = { workspace = true }
loadr-config = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
chromiumoxide = { version = "0.9.1", features = ["bytes"] }

[dev-dependencies]
loadr-testserver = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
tracing-subscriber = { workspace = true }
