[package]
name = "loadr-config"
description = "YAML test definition schema, parsing, validation and interpolation for loadr"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_path_to_error = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
strsim = { workspace = true }
regex = { workspace = true }
serde_json_path = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
