[package]
name = "loadr-convert"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
loadr-config = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }
humantime = { workspace = true }

[dev-dependencies]
