[package]
name = "loadr-core"
description = "Load generation engine for loadr: executors, virtual users, metrics, thresholds"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
loadr-config = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hdrhistogram = { workspace = true }
regex = { workspace = true }
serde_json_path = { workspace = true }
sxd-document = { workspace = true }
sxd-xpath = { workspace = true }
scraper = { workspace = true }
cookie = { workspace = true }
csv = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
humantime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_yaml = { workspace = true }
loadr-config = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

