[package]
name = "loadr-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
loadr-core = { workspace = true }
loadr-config = { workspace = true }
rquickjs = { workspace = true, features = ["parallel"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
