[package]
name = "loadr-outputs"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
loadr-core = { workspace = true }
loadr-config = { workspace = true }

async-trait = { workspace = true }
bytes = { workspace = true }
csv = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }

snap = "1.1"

[build-dependencies]
protox = { workspace = true }
tonic-prost-build = { workspace = true }
prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
tokio-stream = "0.1"
