[package]
name = "loadr-plugin-api"
description = "Plugin system for loadr: WASM component plugins (extractors/assertions) and native dynamic-library plugins (outputs/protocols/services)"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
loadr-core = { workspace = true }
loadr-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
abi_stable = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
