[package]
name = "loadr-protocols"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Built-in protocol handlers for loadr: HTTP/1.1+HTTP/2, GraphQL, WebSocket, gRPC, raw TCP/UDP"

[dependencies]
loadr-core = { workspace = true }
loadr-config = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }

rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }

tokio-tungstenite = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
protox = { workspace = true }
# Exact-versioned addition for this crate only (matches tonic 0.14): generated
# gRPC server-reflection client used for `reflection: true` descriptor sources.
tonic-reflection = "0.14"

flate2 = { workspace = true }
brotli = { workspace = true }

url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
loadr-testserver = { workspace = true }
parking_lot = { workspace = true }
tempfile = { workspace = true }
indexmap = { workspace = true }
