[package]
name = "loadr-plugin-aws-sigv4"
description = "Native service plugin: a pure-Rust AWS Signature Version 4 request signer (canonical request + Authorization header)"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_aws_sigv4"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
# SigV4 is a handful of SHA-256 + HMAC-SHA256 rounds, computed here with a
# hand-rolled, pure-Rust signer (`sha2` + `hmac`) — no AWS SDK, no `aws-*`
# crate, no OpenSSL/C dependency. The signer does no network or disk I/O of its
# own, so this cdylib cross-compiles cleanly for every release target.
sha2 = { workspace = true }
hmac = { workspace = true }
time = { workspace = true }
