[package]
name = "loadr-plugin-cassandra"
description = "Native protocol plugin: adds Apache Cassandra / ScyllaDB (cql://) as a loadr load-test target"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_cassandra"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
# The CQL v4 binary protocol is hand-rolled directly over a blocking
# `std::net::TcpStream` — a pure-Rust, std-only stack with no C deps
# (deliberately NO `scylla` / `cassandra-cpp` driver, no OpenSSL and no async
# runtime), so this cdylib cross-compiles cleanly for every loadr release
# target. Frame headers, the STARTUP -> READY handshake, QUERY and RESULT
# parsing are all implemented in `src/lib.rs`.
