[package]
name = "loadr-plugin-cloudwatch"
description = "Native output plugin: batches loadr snapshot series into AWS CloudWatch PutMetricData over SigV4-signed HTTPS"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_cloudwatch"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
once_cell = "1"
# CloudWatch PutMetricData is the plain AWS Query API over HTTPS plus a SigV4
# `Authorization` header, so this plugin posts to it directly over the project's
# existing hyper + hyper-rustls stack and signs the request with a hand-rolled,
# pure-Rust SigV4 signer (sha2 + hmac). No AWS SDK, no CloudWatch agent, no
# `aws-lc`/OpenSSL C dependency — `hyper-rustls` selects `ring` + webpki roots —
# so the cdylib cross-compiles cleanly for every release target.
tokio = { version = "1.52", features = ["rt-multi-thread", "time"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
time = { workspace = true }
