[package]
name = "loadr-plugin-data-cleanup"
description = "Native service plugin: tracks the resources a run creates and deletes them at run end (HTTP DELETE or SQL DELETE)"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_data_cleanup"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
once_cell = "1"
# The `http-delete` strategy issues DELETEs over the project's existing
# hyper + hyper-rustls stack (webpki roots + `ring`), so there is no extra HTTP
# client and no OpenSSL/C dependency. `tokio` is enabled with only the features
# the one-shot end-of-run deletes need.
tokio = { version = "1.52", features = ["rt-multi-thread", "net", "time"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
# The `sql` strategy runs a parameterised DELETE per tracked id. The heavy
# `sqlx` driver lives ONLY in this plugin crate, never in loadr core. The `any`
# feature lets one plugin serve both PostgreSQL and MySQL connection URLs (the
# driver is chosen from the URL scheme at connect time). `rustls` TLS avoids a
# system OpenSSL dependency for portable cdylib builds.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "mysql",
    "tls-rustls-ring",
] }
