[package]
name = "loadr-plugin-datadog"
description = "Native output plugin: batches loadr snapshot series into the Datadog v2 series HTTP API"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_datadog"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1"
tokio = { version = "1.52", features = ["rt-multi-thread", "time"] }
# The Datadog metrics intake is plain HTTPS/JSON, so this plugin posts to it
# directly over the project's existing hyper + hyper-rustls stack rather than
# pulling in a Datadog SDK or the trace agent. `hyper-rustls` selects `ring` +
# webpki roots — pure-Rust TLS, no system OpenSSL — so the cdylib
# cross-compiles cleanly for every release target.
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
