[package]
name = "loadr-plugin-db-seeder"
description = "Native service plugin: runs setup SQL before a run and teardown SQL after, for a known fixture state per run"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_db_seeder"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
once_cell = "1"
tokio = { version = "1.52", features = ["rt-multi-thread"] }
# The heavy `sqlx` driver lives ONLY in this plugin crate, never in loadr core.
# The `any` feature is enabled so a single plugin can seed both PostgreSQL and
# MySQL (the driver is chosen from the URL scheme at connect time). Enabling
# `mysql` pulls in its transitive `rsa` dep (RUSTSEC-2023-0071), confined to this
# plugin crate; `loadr-plugin-postgres` stays advisory-clean. `rustls` TLS avoids
# a system OpenSSL dependency so this cdylib cross-compiles cleanly.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "mysql",
    "tls-rustls-ring",
] }
