[package]
name = "loadr-plugin-elasticsearch"
description = "Native protocol plugin: adds Elasticsearch (elasticsearch://) as a loadr load-test target"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_elasticsearch"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
once_cell = "1"
tokio = { version = "1.52", features = ["rt-multi-thread"] }
# Elasticsearch's API is plain HTTP/JSON, so this plugin talks to it directly
# over the project's existing hyper + hyper-rustls stack instead of dragging in
# the heavy official `elasticsearch` crate (and its native/openssl transitive
# deps). `hyper-rustls` selects `ring` + webpki roots — pure-Rust TLS, no system
# OpenSSL — so the cdylib cross-compiles cleanly for every release target.
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
