[package]
name = "loadr-plugin-faker-gen"
description = "Native service plugin: a seeded, pure-Rust fake-data generator that materialises CSV rows for feeders"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_faker_gen"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
# Fake rows are produced from small built-in word lists driven by a seeded
# `SmallRng`, so the whole generator is pure Rust with no C dependencies and
# cross-compiles cleanly for every release target. `rand` alone gives us
# reproducible-by-seed output; the heavier `fake` crate is deliberately avoided
# because it pins an older `rand` and would duplicate the RNG stack.
rand = { workspace = true }
