[package]
name = "loadr-plugin-hmac-signer"
description = "Native service plugin: a pure-Rust HMAC (SHA-256/512) request signer served over a local endpoint"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_hmac_signer"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
# The keyed MAC and hash are computed in pure Rust (`hmac` + `sha2`) with the
# signature encoded via `base64`/hex — no OpenSSL, no C dependency and no async
# runtime, so this cdylib cross-compiles cleanly for every release target.
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
