[package]
name = "loadr-plugin-junit-report"
description = "Native output plugin: maps checks and thresholds to JUnit testcases and writes junit.xml"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_junit_report"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
# Pure Rust, std-only: the run summary arrives as JSON, and the report is a
# hand-rolled XML string written to a file with `std::fs`/`std::io`. No external
# test-reporter binary, no XSLT and no C deps, so this cdylib cross-compiles
# cleanly for every release target.
