[package]
name = "loadr-plugin-k8s-metrics"
description = "Native service plugin: polls the Kubernetes metrics API for pod CPU/memory and emits system-metric samples"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_k8s_metrics"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
# The metrics API is plain HTTPS/JSON, so this plugin scrapes it directly over
# the project's existing hyper + hyper-rustls stack — no kubectl, no Kubernetes
# client SDK, no C dependency. `hyper-rustls` selects `ring` + a rustls
# ClientConfig (pure-Rust TLS, no system OpenSSL) so the cdylib cross-compiles
# cleanly for every release target. A single Tokio runtime drives the async GETs
# from the (non-async) poller thread.
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
# In-cluster the API server presents the cluster CA (not a public root), so the
# collector builds its own rustls root store from the mounted `ca_cert` (or skips
# verification with `insecure` for off-cluster testing) — the same rustls 0.23
# surface the core TLS handlers use.
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
