[package]
name = "loadr-plugin-kafka"
description = "Native protocol plugin: adds Apache Kafka (kafka://) as a loadr load-test target"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_kafka"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
once_cell = "1"
tokio = { version = "1.52", features = ["rt-multi-thread", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# The Kafka client lives ONLY in this plugin crate, never in loadr core.
# `rskafka` is a PURE-RUST Kafka client (no librdkafka / C toolchain), so the
# cdylib cross-compiles to every release target. We disable default features to
# drop the C-backed compression codecs (lz4 → C `lz4`, zstd → C `zstd-sys`,
# gzip → `flate2`); the plugin produces/fetches with `Compression::NoCompression`
# so no codec is needed, keeping the dependency tree fully pure-Rust (rustls
# only, no OpenSSL/native-tls).
rskafka = { version = "0.6", default-features = false }
