[package]
name = "loadr-plugin-mongo"
description = "Native protocol plugin: adds MongoDB (mongodb://) as a loadr load-test target"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_mongo"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# The heavy MongoDB driver lives ONLY in this plugin crate, never in loadr core.
# `rustls-tls` avoids a system OpenSSL dependency for portable cdylib builds.
# `bson-3` + `compat-3-3-0` are required by mongodb 3.x when default features
# are off; they select the bson 3 API and pin forward-compat behaviour.
mongodb = { version = "3.2", default-features = false, features = [
    "rustls-tls",
    "bson-3",
    "compat-3-3-0",
] }
once_cell = "1"
futures-util = "0.3"
tokio = { version = "1.52", features = ["rt-multi-thread"] }
