[package]
name = "loadr-plugin-mqtt"
description = "Native protocol plugin: adds MQTT (mqtt://) as a loadr load-test target"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_mqtt"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
# The MQTT 3.1.1 control packets (CONNECT/CONNACK, PUBLISH/PUBACK, the QoS-2
# PUBREC/PUBREL/PUBCOMP flow and SUBSCRIBE/SUBACK) are hand-rolled and spoken
# directly over a blocking `std::net` TCP socket — a pure-Rust, std-only stack
# with no C deps (deliberately no `rumqttc`/`paho`, no OpenSSL and no async
# runtime), so this cdylib cross-compiles cleanly for every loadr release
# target, exactly like the `nats` plugin.
