[package]
name = "loadr-plugin-mysql"
description = "Native protocol plugin: adds MySQL (mysql://) as a loadr load-test target"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_mysql"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
once_cell = "1"
tokio = { version = "1.52", features = ["rt-multi-thread"] }
# The heavy `sqlx` driver lives ONLY in this plugin crate, never in loadr core.
# This plugin enables ONLY the `mysql` feature, which pulls in `sqlx-mysql` and
# its transitive `rsa` dep (RUSTSEC-2023-0071). `rsa` is therefore confined to
# this MySQL-only plugin; `loadr-plugin-postgres` is fully advisory-clean.
# `rustls` TLS avoids a system OpenSSL dependency for portable cdylib builds.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "tls-rustls-ring",
] }
