[package]
name = "loadr-plugin-nats"
description = "Native protocol plugin: adds NATS (nats://) as a loadr load-test target"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_nats"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
# The NATS client protocol is spoken directly over a blocking `std::net`
# TCP socket — a pure-Rust, std-only stack with no C deps (deliberately no
# `async-nats` crate, no OpenSSL and no async runtime), so this cdylib
# cross-compiles cleanly for every loadr release target.
