[package]
name = "loadr-plugin-oauth2-minter"
description = "Native service plugin: mints, caches and auto-refreshes an OAuth2 bearer token shared by every VU"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_oauth2_minter"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
# The OAuth2 token endpoint is plain HTTPS/form-encoded, so this plugin runs the
# grant directly over the project's existing hyper + hyper-rustls stack rather
# than pulling in an OAuth SDK. `hyper-rustls` selects `ring` + webpki roots —
# pure-Rust TLS, no system OpenSSL — so the cdylib cross-compiles cleanly for
# every release target. A single Tokio runtime drives the async POSTs; the
# background refresh thread `block_on`s each grant.
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio = { version = "1.52", features = ["rt-multi-thread", "time"] }
