[package]
name = "loadr-plugin-otlp-metrics"
description = "Native output plugin: exports loadr snapshot series as OTLP metrics over OTLP/HTTP (protobuf or JSON) to an OpenTelemetry collector"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "loadr_plugin_otlp_metrics"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
# OTLP/HTTP is plain HTTP(S): a protobuf or JSON body POSTed to the collector's
# `/v1/metrics` endpoint. The plugin hand-encodes the small OTLP metrics message
# on the protobuf wire itself (no `prost`, no `protox`, no `protoc`, no
# OpenTelemetry SDK) and ships it over the project's existing hyper +
# hyper-rustls stack. `hyper-rustls` selects `ring` + webpki roots — pure-Rust
# TLS, no system OpenSSL — so the cdylib cross-compiles cleanly for every
# release target.
tokio = { version = "1.52", features = ["rt-multi-thread", "time"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
